{
    "name": "CameraControls",
    "maps": [
        {
            "name": "Camera",
            "id": "afbbfd9f-c72d-4bb2-861d-4fdba888c3f6",
            "actions": [
                {
                    "name": "MoveCamera",
                    "type": "Button",
                    "id": "4eaec1fe-d99a-4117-b315-70cfcdaa676f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ZoomCamera",
                    "type": "Value",
                    "id": "dfa2b003-eab0-4464-a8cb-ed851235761f",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "67ac12eb-5f14-4587-a4f3-0792dd8407f7",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveCamera",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0be8117c-9cc2-471b-92f8-eab72cc9b6c6",
                    "path": "<Mouse>/scroll",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "ZoomCamera",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Keyboard",
            "bindingGroup": "Keyboard",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Mouse>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}